# langchain_practice

./: .gitignore  README.md  pyproject.toml  requirements.txt
langchain_examples/: 01-langchain-agent.ipynb  02-langchain-tools.ipynb  03-langchain-short-term-memory.ipynb  langgraph.json  personal_chef.py
