[project]
name = "langchain_practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "langgraph-api>=0.10.0",
    "langgraph-cli>=0.4.30",
    "langsmith>=0.9.4",
    "python-dotenv>=1.2.2",
    "tavily>=1.1.0",
]
